--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:allowBackup="true"
-                 android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="true"
                  android:name=".GourmetApplication"
+                 android:label="${label}"
                  android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".GourmetActivity">
             <intent-filter>
