--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 
         def nav_version = "2.1.0-alpha06"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:7.4.0"
     }
 }
 
@@ -28,4 +30,10 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+apply plugin: "org.jlleitschuh.gradle.ktlint-idea"
+
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
