--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,20 +31,20 @@ jobs:
           name: ktlint
           command: |
             ./gradlew $SIGN_CONFIG --continue \
-              app:ktlint${BUILD_TYPE}Check
+              app:ktlintCheck
       - run:
           name: Build
           command: |
             ./gradlew $SIGN_CONFIG \
               -PversionCode=$VERSION_CODE_TOUCH \
               -PversionName=${VERSION_NAME} \
-              app:assemble${BUILD_TYPE}
+              app:assemble${STAGE}${BUILD_TYPE}
       - run:
           name: Test
           command: |
             ./gradlew $SIGN_CONFIG --continue \
-              app:test${STAGE}${LIBS}${BUILD_TYPE}UnitTest \
-              app:lint${STAGE}${LIBS}${BUILD_TYPE}
+              app:test${STAGE}${BUILD_TYPE}UnitTest \
+              app:lint${STAGE}${BUILD_TYPE}
       - store_artifacts:
           path: app/build/outputs
           destination: app-outputs
@@ -66,7 +66,7 @@ jobs:
               "app/build/outputs/apk/${BUILD_TYPE_LOWER}/app-${BUILD_TYPE_LOWER}.apk" \
               $RELEASENOTES_FILE \
               $APPCENTER_GROUP \
-              "app/build/outputs/mapping/${BUILD_TYPE_LOWER}/mapping.txt" \
+              "app/build/outputs/mapping/${${BUILD_TYPE_LOWER}/mapping.txt" \
               "$VERSION_CODE" \
               "$VERSION_NAME"
       - save_cache:
