--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,30 +17,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [label: appName]
     }
-    buildTypes {
-        debug {
-        }
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
-        }
-    }
-    flavorDimensions "stage"
-
-    productFlavors {
-        prod {
-            dimension "stage"
-            buildConfigField "String", "APPCENTER_ID", "$gourmetAppcenterId"
-            manifestPlaceholders = [label: appName + "-debug"]
-        }
-        dev {
-            dimension "stage"
-            applicationIdSuffix ".dev"
-            manifestPlaceholders = [label: appName + "-Dev"]
-            buildConfigField "String", "APPCENTER_ID", "$gourmetAppcenterDevId"
-        }
-    }
 
     signingConfigs {
         //noinspection GroovyMissingReturnStatement, GroovyAssignabilityCheck
@@ -57,6 +33,35 @@ android {
             }
         }
     }
+
+    buildTypes {
+        debug {
+        }
+        release {
+            useProguard true
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            if (project.hasProperty("gourmetKeyStore") && file(gourmetKeyStore).exists() && file(gourmetKeyStore).isFile()) {
+                signingConfig signingConfigs.release
+            }
+        }
+    }
+
+    flavorDimensions "stage"
+    productFlavors {
+        prod {
+            dimension "stage"
+            buildConfigField "String", "APPCENTER_ID", "$gourmetAppcenterId"
+            manifestPlaceholders = [label: appName + "-debug"]
+        }
+        dev {
+            dimension "stage"
+            applicationIdSuffix ".dev"
+            manifestPlaceholders = [label: appName + "-Dev"]
+            buildConfigField "String", "APPCENTER_ID", "$gourmetAppcenterDevId"
+        }
+    }
     dataBinding.enabled = true
 }
 
@@ -64,6 +69,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     def room_version = "2.1.0"
