update mulitple libraries, gradle, etc.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="true"
-                 android:name=".GourmetApplication"
+                 android:name="de.nicidienase.geniesser_app.GourmetApplication"
                  android:label="${label}"
                  android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".GourmetActivity">
+        <activity android:name="de.nicidienase.geniesser_app.GourmetActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
