--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ android {
             buildConfigField "String", "APPCENTER_ID", "$gourmetAppcenterDevId"
         }
     }
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 
@@ -113,6 +113,8 @@ dependencies {
     def appCenterSdkVersion = '2.2.0'
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
+
 
     def glideVersion = '4.9.0'
     implementation "com.github.bumptech.glide:glide:${glideVersion}"
