--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,18 +91,18 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta05'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
-    def room_version = "2.1.0"
+    def room_version = "2.2.3"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -124,8 +124,24 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.6.0"
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-alpha-3'
+
+    def hyperionVersion = '0.9.27'
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-core:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-attr:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-build-config:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-crash:$hyperionVersion"
+//    debugImplementation "com.willowtreeapps.hyperion:hyperion-sqlite:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-disk:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-geiger-counter:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-measurement:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-phoenix:$hyperionVersion"
+//    debugImplementation "com.willowtreeapps.hyperion:hyperion-recorder:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-shared-preferences:$hyperionVersion"
+    debugImplementation "com.willowtreeapps.hyperion:hyperion-timber:$hyperionVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
