--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,11 @@
-apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
-apply plugin: "kotlin-android-extensions"
-apply plugin: "kotlin-kapt"
-apply plugin: "androidx.navigation.safeargs.kotlin"
+plugins{
+    id("com.android.application")
+    id("kotlin-android")
+    id("kotlin-android-extensions")
+    id("kotlin-kapt")
+    id("androidx.navigation.safeargs.kotlin")
+    id("de.mannodermaus.android-junit5")
+}
 
 String appName = "Genießer-App"
 String versionString = new File("versionfile").text.trim()
@@ -21,7 +24,6 @@ android {
         targetSdkVersion 29
         versionCode getMyVersionCode()
         versionName versionString
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [label: appName]
         javaCompileOptions {
             annotationProcessorOptions {
@@ -29,6 +31,7 @@ android {
                                      "$projectDir/schemas".toString()]
             }
         }
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -86,6 +89,11 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    packagingOptions {
+        exclude "META-INF/LICENSE*"
+    }
+
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
@@ -148,7 +156,14 @@ dependencies {
     debugImplementation "com.willowtreeapps.hyperion:hyperion-shared-preferences:$hyperionVersion"
     debugImplementation "com.willowtreeapps.hyperion:hyperion-timber:$hyperionVersion"
 
-    testImplementation "junit:junit:4.12"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
+
+    testImplementation "org.junit.platform:junit-platform-launcher:1.6.0"
+
+    testImplementation("org.assertj:assertj-core:3.11.1")
+    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
+
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
     androidTestImplementation "androidx.test:runner:1.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
