--- a/postman/genussapp.postman_collection.json
+++ b/postman/genussapp.postman_collection.json
@@ -1,12 +1,51 @@
 {
 	"info": {
-		"_postman_id": "f3e68032-3767-4725-88f7-3d46e95b6cde",
+		"_postman_id": "ede92a5d-df80-4aa1-a52d-986f3a975f99",
 		"name": "genussapp",
 		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json"
 	},
 	"item": [
 		{
 			"name": "Standorte",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"id": "24f76f44-8863-4fab-b0dd-ad071e881084",
+						"exec": [
+							"var template = `",
+							"    <table bgcolor=\"#FFFFFF\">",
+							"        <tr>",
+							"            <th>Id</th>",
+							"            <th>Name</th>",
+							"            <th>active</th>",
+							"            <th>Logo</th>",
+							"            <th>Logo</th>",
+							"            <th>Logo</th>",
+							"        </tr>",
+							"",
+							"        {{#each response}}",
+							"            <tr>",
+							"                <td>{{id}}</td>",
+							"                <td>{{name}}</td>",
+							"                <td>{{active}}</td>",
+							"                <td><img src=\"{{logoImage}}\" width=100/></td>",
+							"                <td><img src=\"{{standortImage}}\" width=100/></td>",
+							"                <td><img src=\"{{mapImage}}\" width=100/></td>",
+							"            </tr>",
+							"        {{/each}}",
+							"    </table>",
+							"`;",
+							"",
+							"pm.visualizer.set(template, {",
+							"    // Pass the response body parsed as JSON as `data`",
+							"    response: pm.response.json()",
+							"});"
+						],
+						"type": "text/javascript"
+					}
+				}
+			],
 			"request": {
 				"method": "GET",
 				"header": [
@@ -88,6 +127,18 @@
 		},
 		{
 			"name": "Gericht-Merkmale",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"id": "c7bde16a-112c-4674-b124-04413d466b78",
+						"exec": [
+							""
+						],
+						"type": "text/javascript"
+					}
+				}
+			],
 			"request": {
 				"method": "GET",
 				"header": [
@@ -199,6 +250,45 @@
 		},
 		{
 			"name": "News",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"id": "54bd61c4-b535-43cf-88af-cc64b066913c",
+						"exec": [
+							"var template = `",
+							"    <table bgcolor=\"#FFFFFF\">",
+							"        <tr>",
+							"            <th>Id</th>",
+							"            <th>Text</th>",
+							"            <th>Location</th>",
+							"        </tr>",
+							"",
+							"        {{#each response}}",
+							"            <tr>",
+							"                <td>{{id}}<br/><img src=\"{{newsImage}}\" width=200/></td>",
+							"                <td><h3>{{titel}}</h3>{{inhaltRichtext}}</td>",
+							"                <td>",
+							"                <ul>",
+							"                {{#each locationInfo}}",
+							"                    <li>{{name}}</li>",
+							"                {{/each}}",
+							"                </ul>",
+							"                </td>",
+							"            </tr>",
+							"        {{/each}}",
+							"    </table>",
+							"`;",
+							"",
+							"pm.visualizer.set(template, {",
+							"    // Pass the response body parsed as JSON as `data`",
+							"    response: pm.response.json()",
+							"});"
+						],
+						"type": "text/javascript"
+					}
+				}
+			],
 			"request": {
 				"auth": {
 					"type": "basic",
