--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins{
     id("kotlin-kapt")
     id("androidx.navigation.safeargs.kotlin")
     id("de.mannodermaus.android-junit5")
+    id("com.google.gms.google-services")
 }
 
 String appName = "Genießer-App"
@@ -114,6 +115,7 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.preference:preference:1.1.0"
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     def room_version = "2.2.4"
     implementation "androidx.room:room-runtime:$room_version"
