--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ buildscript {
         def nav_version = "2.2.1"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.0.0"
-
         classpath "org.jlleitschuh.gradle:ktlint-gradle:8.0.0"
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
