--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,9 +78,9 @@ android {
             buildConfigField "String", "APPCENTER_ID", "$gourmetAppcenterDevId"
         }
     }
-    dataBinding {
-        enabled = true
-    }
+
+    dataBinding.enabled = true
+    viewBinding.enabled = true
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -160,6 +160,7 @@ dependencies {
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.6.0"
 
     testImplementation "org.junit.platform:junit-platform-launcher:1.6.0"
 
