--- a/postman/genuss-app.postman_environment.json
+++ b/postman/genuss-app.postman_environment.json
@@ -1,10 +1,10 @@
 {
-	"id": "82802a4b-34ef-4c95-b0d0-28fb2cdcbf45",
+	"id": "3a807d80-2e96-4e49-a455-1cc7dabd763f",
 	"name": "genuss-app",
 	"values": [
 		{
 			"key": "BASE_URL",
-			"value": "https://genussapp.konkaapps.de",
+			"value": "https://genussapp.konkaapps.de/",
 			"enabled": true
 		},
 		{
@@ -21,9 +21,14 @@
 			"key": "LOCATION",
 			"value": "3317",
 			"enabled": true
+		},
+		{
+			"key": "QR_CONTENT",
+			"value": "1550006091548",
+			"enabled": true
 		}
 	],
 	"_postman_variable_scope": "environment",
-	"_postman_exported_at": "2019-07-15T18:52:03.394Z",
-	"_postman_exported_using": "Postman/7.2.2"
+	"_postman_exported_at": "2020-09-22T00:49:44.608Z",
+	"_postman_exported_using": "Postman/7.27.1"
 }
