--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath("com.android.tools.build:gradle:7.0.0-beta03")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        def nav_version = "2.2.1"
+        def nav_version = "2.3.5"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.1.0"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:9.1.1"
