--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ jobs:
   build:
     working_directory: ~/code
     docker:
-      - image: circleci/android@sha256:061e2535826cc3fe4c4a440e716bf06c36c80401ee635c339c6803b3e427ebb3
+#      - image: circleci/android@sha256:061e2535826cc3fe4c4a440e716bf06c36c80401ee635c339c6803b3e427ebb3
+      - image: circleci/android:api-30
     environment:
       JVM_OPTS: -XX\:MaxHeapSize\=2048m -Xmx1536m
       LIBS: NoFree
