--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,7 +143,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    def nav_version_ktx = "2.3.5"
+//    def nav_version_ktx = "2.3.5"
+    def nav_version_ktx = "2.4.0-alpha02"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
 
