--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,8 @@ jobs:
     working_directory: ~/code
     docker:
 #      - image: circleci/android@sha256:061e2535826cc3fe4c4a440e716bf06c36c80401ee635c339c6803b3e427ebb3
-      - image: circleci/android:api-30
+#      - image: circleci/android:api-30
+      - image: circleci/android
     environment:
       JVM_OPTS: -XX\:MaxHeapSize\=2048m -Xmx1536m
       LIBS: NoFree
