--- a/postman/genuss-app.postman_environment.json
+++ b/postman/genuss-app.postman_environment.json
@@ -1,10 +1,10 @@
 {
-	"id": "3a807d80-2e96-4e49-a455-1cc7dabd763f",
+	"id": "82802a4b-34ef-4c95-b0d0-28fb2cdcbf45",
 	"name": "genuss-app",
 	"values": [
 		{
 			"key": "BASE_URL",
-			"value": "https://genussapp.konkaapps.de/",
+			"value": "https://genussapp-api-mt.konkaapps.de",
 			"enabled": true
 		},
 		{
@@ -23,12 +23,17 @@
 			"enabled": true
 		},
 		{
+			"key": "BASE_PATH",
+			"value": "kms-mt-webservices/webresources",
+			"enabled": true
+		},
+		{
 			"key": "QR_CONTENT",
 			"value": "1550006091548",
 			"enabled": true
 		}
 	],
 	"_postman_variable_scope": "environment",
-	"_postman_exported_at": "2020-09-22T00:49:44.608Z",
-	"_postman_exported_using": "Postman/7.27.1"
+	"_postman_exported_at": "2021-08-02T12:16:18.721Z",
+	"_postman_exported_using": "Postman/8.9.1"
 }
